updated social media page

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -47,10 +47,10 @@
                             <h1 class="textColor">Vaishnavi</h1>
                             <h5>-Student of Bharath University</h5>
                             <div class="icon mt-3">
-                                <a href="https://www.instagram.com/p.s.vaishu_tn70/"><i
+                                <a href="https://www.instagram.com/p.s.vaishu_tn70/" target="_blank"><i
                                         class="fa-brands fa-instagram inst"></i></a>
-                                <a href=""><i class="fa-brands fa-linkedin linked"></i></a>
-                                <a href=""><i class="fa-brands fa-github git"></i></a>
+                                <a href="https://www.linkedin.com/in/vaishnavi-palanisamy-33202a2b5/" target="_blank"><i class="fa-brands fa-linkedin linked"></i></a>
+                                <a href="https://github.com/Vaishnavisara" target="_blank"><i class="fa-brands fa-github git"></i></a>
                             </div>
                         </div>
                     </div>
@@ -60,6 +60,7 @@
                         <img src="image/profile2.jpg" class="photo2">
                     </div>
                 </div>
+            
             </div>
         </div>
     </div>
