--- a/Mymentors.html
+++ b/Mymentors.html
@@ -63,7 +63,7 @@
                             educational wing of HOPE3 Foundation
 
                         <h5><span class="textColor">Dr. Meenakshi Sundaram</span></h5>
-                        Managing Trustee, Hope3 India Foundation</p>
+                        Intel Corp,USA</p>
                     </div>
                 </div>
 
