--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     <div class="col-sm-6 aboutme">
 
                         <h1 class="textColor">About me</h1><br><br>
-                        <h6>I am available for <span class="textColor">frontend </span>and <span class="textColor">android app projects</span>android app projects</h6><br>
+                        <h6>I am available for <span class="textColor">frontend </span>and <span class="textColor">android app projects</span></h6><br>
                         <p>Welcome to my portfolio! I am Vaishnavi,BCA student of Bharath Univrsity.
                             i am very passionate about software development.i am from krishnagiri district.
                             i can do both frentend and android apps.
