--- a/bootstrap.html
+++ b/bootstrap.html
@@ -19,19 +19,19 @@
                     <h2>Port <span class="textColor">Folio</span></h2>
                 </div>
                 <div class="col-sm-1 ">
-                    <p><a href="" class="default">Home</a></p>
+                    <a href="" style="text-decoration: none;" class="default">Home</a>
                 </div>
                 <div class="col-sm-1">
-                    <p><a href="MySkills.html" class="skil">My skills</a></p>
+                    <a href="MySkills.html" style="text-decoration: none;" class="skil">My skills</a>
                 </div>
                 <div class="col-sm-1">
-                    <p><a href="education.html" class="edu">Education</a></p>
+                    <a href="education.html" style="text-decoration: none;" class="edu">Education</a>
                 </div>
                 <div class="col-sm-1">
-                    <p><a href="about.html" class="abut">About me</a> </p>
+                    <a href="about.html"style="text-decoration: none;" class="abut">About me</a> 
                 </div>
                 <div class="col-sm-1">
-                    <p><a href="Mymentors.html" class="ment">Mentor</a> </p>
+                    <a href="Mymentors.html" style="text-decoration: none;" class="ment">Mentors</a> 
                 </div>
             </div>
             <div class="row">
