--- a/education.html
+++ b/education.html
@@ -14,22 +14,22 @@
     <div class="educationBody text-white">
         <div class="row">
             <div class="col-sm-7 headings">
-                <h2>Port <span class="textColor ">Folio</span></h2>
+                <h2>Port <span class="textColor">Folio</span></h2>
             </div>
             <div class="col-sm-1 ">
-                <p><a href="bootstrap.html" class="hom">Home</a></p>
+                <p><a href="bootstrap.html" style="text-decoration: none;" class="hom">Home</a></p>
             </div>
             <div class="col-sm-1">
-                <p><a href="MySkills.html" class="skil">My skills</a></p>
+                <p><a href="MySkills.html" style="text-decoration: none;" class="skil">My skills</a></p>
             </div>
             <div class="col-sm-1">
-                <p><a href="" class="default">Education</a></p>
+                <p><a href="" style="text-decoration: none;" class="default">Education</a></p>
             </div>
             <div class="col-sm-1">
-                <p><a href="about.html" class="abut">About me</a> </p>
+                <p><a href="about.html" style="text-decoration: none;" class="abut">About me</a> </p>
             </div>
             <div class="col-sm-1">
-                <p><a href="Mymentors.html" class="ment">Mentor</a> </p>
+                <p><a href="Mymentors.html" style="text-decoration: none;" class="ment">Mentor</a> </p>
             </div>
 
         <!-- _______________________________________________________________________________________ -->
