--- a/MySkills.html
+++ b/MySkills.html
@@ -16,19 +16,19 @@
             <h2>Port <span class="textColor ">Folio</span></h2>
         </div>
         <div class="col-sm-1 ">
-            <p><a href="bootstrap.html" class="hom">Home</a></p>
+            <p><a href="bootstrap.html" style="text-decoration: none;" class="hom">Home</a></p>
         </div>
         <div class="col-sm-1">
-            <p><a href="" class="default">My skills</a></p>
+            <p><a href="" style="text-decoration: none;" class="default">My skills</a></p>
         </div>
         <div class="col-sm-1">
-            <p><a href="education.html" class="edu">Education</a></p>
+            <p><a href="education.html" style="text-decoration: none;" class="edu">Education</a></p>
         </div>
         <div class="col-sm-1">
-            <p><a href="about.html" class="abut">About me</a> </p>
+            <p><a href="about.html" style="text-decoration: none;" class="abut">About me</a> </p>
         </div>
         <div class="col-sm-1">
-            <p><a href="Mymentors.html" class="ment">Mentor</a> </p>
+            <p><a href="Mymentors.html" style="text-decoration: none;" class="ment">Mentor</a> </p>
         </div>
         <!-- _______________________________________________________________________________________ -->
         <h1 class="head textColor">My Skills</h1>
