--- a/Mymentors.html
+++ b/Mymentors.html
@@ -18,19 +18,19 @@
                 <h2>Port <span class="textColor ">Folio</span></h2>
             </div>
             <div class="col-sm-1 ">
-                <p><a href="bootstrap.html" class="hom">Home</a></p>
+                <p><a href="bootstrap.html" style="text-decoration: none;" class="hom">Home</a></p>
             </div>
             <div class="col-sm-1">
-                <p><a href="MySkills.html" class="skil">My skills</a></p>
+                <p><a href="MySkills.html" style="text-decoration: none;" class="skil">My skills</a></p>
             </div>
             <div class="col-sm-1">
-                <p><a href="education.html" class="edu">Education</a></p>
+                <p><a href="education.html" style="text-decoration: none;" class="edu">Education</a></p>
             </div>
             <div class="col-sm-1">
-                <p><a href="about.html" class="abut">About me</a> </p>
+                <p><a href="about.html" style="text-decoration: none;" class="abut">About me</a> </p>
             </div>
             <div class="col-sm-1">
-                <p><a href="" class="default">Mentor</a> </p>
+                <p><a href="" style="text-decoration: none;" class="default">Mentor</a> </p>
             </div>
         </div>
 
