--- a/Mymentors.html
+++ b/Mymentors.html
@@ -115,13 +115,13 @@
                     <img src="image/sathish.jpg" class="rounded-circle sathish ">
                     <div class="sixth ">
                         <p>
-                            Mr Sathish Kumar is working as English Teacher in government school
+                            Mr Sathish is working as English Teacher in government school
                             located in Anchetty ,krishnagiri district.
                             "He has provided opportunities for many talented students without financial means
                             to pursue higher education. As a result, many of them are now successful."
 
 
-                        <h5><span class="textColor">Mr Sathish Kumar</span></h5>
+                        <h5><span class="textColor">Mr Sathish </span></h5>
                         Teacher,Anchetty</p>
                     </div>
                 </div>
